src/objects/ffr__InquiryTemplateSortItem__c.object
<CustomObject>
    <description>Stores the default sorting and grouping options for the display in action views.</description>
    <fields>
        <fullName>ffr__GroupBy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__HideDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplateColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action View Template Column</label>
        <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Action View Template Sort Items</relationshipLabel>
        <relationshipName>InquiryTemplateSortItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>ffr__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Action View Template Sort Items</relationshipLabel>
        <relationshipName>InquiryTemplateSortItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Order__c</fullName>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__UsePicklistOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Picklist order when sorting.</label>
        <type>Checkbox</type>
    </fields>
    <label>Action View Template Sort Item</label>
    <nameField>
        <displayFormat>ITSI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Sort Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>